--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #2196f3;
-$secondary-color: #a0b0b9;
+$primary-color: rgba(24, 144, 255, 1);
+$success-color: rgba(82, 196, 26, 1);
 $primary-outline: 1px solid
   darken(
     $color: $primary-color,
