added current article page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,3 +15,7 @@ body {
 .ant-pagination-item-active a {
     color: white !important;
   }
+
+.ant-tag {
+  color: $text-color-secondary !important;
+}
