--- a/src/components/articlePage/articlePage.module.scss
+++ b/src/components/articlePage/articlePage.module.scss
@@ -1,21 +1,30 @@
 @import '../../styles/variables.scss';
 
+.wrap {
+  padding-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .card {
   background-color: white;
-  height: 110px;
   width: 940px;
   padding: 15px;
-  
+  margin-bottom: 25px;
   border-radius: 5px;
+
+  font-family: Inter;
+
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
+}
+
+.cardHeader {
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   
-  font-family: Inter;
-  margin-bottom: 25px;
-
-  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
 }
 
 .card:first-child {
@@ -33,8 +42,7 @@
   color: $primary-color;
   font-size: 20px;
   line-height: 28px;
-  text-decoration: none;
-  cursor: pointer;
+  max-width: 600px;
 }
 
 .likeBtn {
@@ -56,7 +64,7 @@
 .desc {
   font-size: 12px;
   overflow: hidden;
-  color: $text-color-primary;
+  color: $text-color-secondary;
 }
 
 .author {
@@ -84,4 +92,11 @@
 
 .avatar {
   height: 46px;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 140px;
 }
