minor visual changes

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -52,11 +52,12 @@
   margin-left: 27px;
   text-decoration: none;
   color:rgba(0, 0, 0, 0.85);
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .username {
-  margin-right: 10px;
-
   font-family: 'Inter';
   font-weight: 400;
   font-size: 18px;
