--- a/src/components/articleCard/articleCard.module.scss
+++ b/src/components/articleCard/articleCard.module.scss
@@ -35,6 +35,7 @@
   font-size: 20px;
   line-height: 28px;
   text-decoration: none;
+  overflow: hidden;
   cursor: pointer;
 }
 
@@ -58,7 +59,7 @@
 .desc {
   width: 750px;
   font-size: 12px;
-  overflow: hidden;
+  overflow-wrap: break-word;
   color: $text-color-primary;
 }
 
