--- a/src/pages/articlePage/articlePage.module.scss
+++ b/src/pages/articlePage/articlePage.module.scss
@@ -44,6 +44,7 @@
   font-size: 20px;
   line-height: 28px;
   font-weight: 400;
+  overflow-wrap: break-word;
   max-width: 600px;
 }
 
@@ -67,7 +68,7 @@
 .desc {
   width: 750px;
   font-size: 12px;
-  overflow: hidden;
+  overflow-wrap: break-word;
   color: $text-color-secondary;
 }
 
@@ -103,4 +104,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 140px;
+}
+
+.mainText {
+  overflow-wrap: break-word;
 }
