article form, create article page, add delete and edit btns, some minor changes

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -42,10 +42,18 @@
   border-color: rgba(0, 0, 0, 0.85);
 }
 
+.logout:hover {
+  outline: auto;
+}
+
 .greenBtn {
   margin-left: 19px;
   border-color: $success-color;
   color: $success-color;
+}
+
+.greenBtn:hover {
+  outline: auto;
 }
 
 .user {
