--- a/src/pages/articlesPage/articlesPage.module.scss
+++ b/src/pages/articlesPage/articlesPage.module.scss
@@ -7,3 +7,10 @@
   padding-top: 80px;
   margin-bottom: 20px;
 }
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 200px;
+}
