--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
 }
 
 
